# muwebtester

./: .gitignore  README.md  config.js  index.html  run_build_all.sh  run_cmake_all.sh  run_server.sh  viewer.html
audio/: CMakeLists.txt  log.h  muaudioapi.cpp
distr/: audio_module.js  audio_worker.js  muapi.js
main/: CMakeLists.txt  run_build.sh  run_cmake.sh  webapi.cpp  webmain.cpp  webmain.h
main/src/audio/platform/web/: webaudiodriver.cpp  webaudiodriver.h
main/src/audio/rpc/platform/web/: webrpcstreamchannel.cpp  webrpcstreamchannel.h
